--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
                 margin: 0;
             }
             body {
-                background-color: rgb(31, 35, 62);
+                /* background-color: rgb(31, 35, 62); */
+                background: url(./bk.png) center fixed no-repeat;
+                background-size: cover;
                 font-weight: 100;
             }
             #header {
