--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             }
             #header {
                 height: 10vmax;
-                width: 100vw;
-                background-color: rgba(22, 23, 43, 0.8);
+                width: 99vw;
+                background-color: rgba(0, 0, 0, 0.8);
                 color: rgb(235, 235, 235);
             }
             #title {
@@ -53,9 +53,10 @@
             #txt2 {
                 color:rgb(180, 180, 180);
                 padding-right: 15vmin;
+                font-size: 2vmax;
             }
             .btn {
-                background-color: rgba(22, 23, 43, 0.8);
+                background-color: rgba(0, 0, 0, 0.8);
                 border-radius: 5px;
                 padding: 2vmax 7vmin 2vmax 7vmin;
                 color: white;
@@ -63,8 +64,7 @@
                 font-size: 3vmax;
             }
             #page2 {
-                height: 80vmax;
-                background-color: rgb(22, 23, 43);
+                background-color: rgba(0, 0, 0, 0.8);
                 color:rgb(235, 235, 235);
                 padding-left: 5vmin;
             }
@@ -82,7 +82,7 @@
             }
             #footer {
                 text-align: center;
-                background-color: rgb(22, 23, 43);
+                background-color: rgba(0, 0, 0, 0.8);
                 color:rgb(235, 235, 235);
             }
             #f1 {
@@ -149,7 +149,10 @@
             <p style="width: 10vmin;height: 3vmax;"></p>
             <p class="text">静艺（Silence Skill），是世界上最好的计算机破坏工具。它开发自Macchiato，由Akuidefbug提供支持。</p>
             <p style="width: 10vmin;height: 5vmax;"></p>
-            <img src="./logow.png" alt="静艺 Silence Skill 的Logo。" style="height: 40vmax;">
+            <div style="text-align: center;margin-left: -10vmin;">
+                <img src="./logow.png" alt="静艺 Silence Skill 的Logo。" style="height: 20vmax;">
+            </div>
+            <p style="width: 10vmin;height: 5vmax;"></p>
         </div>
         <div id="page3">
             <p style="width: 10vmin;height: 5vmax;"></p>
@@ -178,7 +181,7 @@
             <hr/>
             <div>
                 <p style="width: 10vmin;height: 5vmax;"></p>
-                <p style="text-align: center;">
+                <p style="text-align: center;font-size: 2vmax;">
                     Copyright &copy; 2022 No.28. All rights reserved.
                 </p>
                 <p style="width: 10vmin;height: 5vmax;"></p>
