--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 使用静艺让您的电脑变得更加丰富多彩和惊险刺激。静艺向您提供最优质、低价、安全地计算机破坏服务，无需注册，让您在最危险的计算机环境下工作和游戏。
             </p>
             <p style="width: 10vmin;height: 5vmax;"></p>
-            <a class="btn" href="http://yhz.yhz2000.com/webfolder/DownloadServlet?fileId=706047&s=0.031130414770790482&csrf_token=26ca8ae68978ad9eaeab4b4e3835c9ed45c00cafd3536c57a02acfab37ac8202&id=NDVFQjI4N0Q5QjJCQkMzNjgwMjBGREE2N0I5Rjg5ODQ=">立即下载</a>
+            <a class="btn" href="https://gitee.com/no-28/silence-skill/releases/v6.30.1">立即下载</a>
             <script>
                 var adj = document.getElementById("adj");
                 var adjtime = 1;
@@ -164,7 +164,7 @@
                 如果您只是正常使用静艺，并且不追求非常快速的摧毁和非常强烈的重击，那么您永远不需要为此付费。
             </p>
             <p style="width: 10vmin;height: 5vmax;"></p>
-            <a class="btn" href="http://yhz.yhz2000.com/webfolder/DownloadServlet?fileId=706047&s=0.031130414770790482&csrf_token=26ca8ae68978ad9eaeab4b4e3835c9ed45c00cafd3536c57a02acfab37ac8202&id=NDVFQjI4N0Q5QjJCQkMzNjgwMjBGREE2N0I5Rjg5ODQ=">立即下载</a>
+            <a class="btn" href="https://gitee.com/no-28/silence-skill/releases/v6.30.1">立即下载</a>
             <p style="width: 10vmin;height: 10vmax;"></p>
         </div>
         <div id="footer">
